// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreatableSelect component testing Disable multiple CreatableSelected 1`] = `
<DocumentFragment>
  <div
    class="sc-bXdtCk iKNpYa"
  >
    <div
      class="css-3iigni-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-7-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
        role="log"
      />
      <div
        aria-disabled="true"
        class="css-yw5jbj-control"
      >
        <div
          class="css-1teqy4n"
        >
          <div
            class="css-tiolb5-multiValue"
          >
            <div
              class="css-kgn53w"
            >
              hoge
            </div>
            <div
              aria-label="Remove hoge"
              class="css-s5lend"
              role="button"
            >
              <span
                class="sc-dYOLZc iqnkiY"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20ZM12 10.5858L14.8284 7.75736L16.2426 9.17157L13.4142 12L16.2426 14.8284L14.8284 16.2426L12 13.4142L9.17157 16.2426L7.75736 14.8284L10.5858 12L7.75736 9.17157L9.17157 7.75736L12 10.5858Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="css-tiolb5-multiValue"
          >
            <div
              class="css-kgn53w"
            >
              huga
            </div>
            <div
              aria-label="Remove huga"
              class="css-s5lend"
              role="button"
            >
              <span
                class="sc-dYOLZc iqnkiY"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20ZM12 10.5858L14.8284 7.75736L16.2426 9.17157L13.4142 12L16.2426 14.8284L14.8284 16.2426L12 13.4142L9.17157 16.2426L7.75736 14.8284L10.5858 12L7.75736 9.17157L9.17157 7.75736L12 10.5858Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="css-1hf2qti"
            data-value=""
          >
            <input
              aria-activedescendant=""
              aria-autocomplete="list"
              aria-controls="react-select-7-listbox"
              aria-expanded="true"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              disabled=""
              id="react-select-7-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="css-1wy0on6"
        >
          <div
            aria-hidden="true"
            class="css-1xc3v61-indicatorContainer"
          >
            <div
              class="sc-jMpmlX CBnQj"
            >
              <span
                class="sc-dYOLZc iqnkiY"
                size="18"
              >
                <svg
                  viewBox="0 0 20 20"
                >
                  <path
                    d="m10 10.9 4.1-4.1 1.2 1.1-5.3 5.3L4.7 8l1.2-1.1z"
                    fill="#B3BAC1"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreatableSelect component testing Disable not CreatableSelected 1`] = `
<DocumentFragment>
  <div
    class="sc-bXdtCk iKNpYa"
  >
    <div
      class="css-3iigni-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-5-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
        role="log"
      />
      <div
        aria-disabled="true"
        class="css-yw5jbj-control"
      >
        <div
          class="css-1cnd4z4"
        >
          <div
            class="css-1wzpoj0-placeholder"
            id="react-select-5-placeholder"
          >
            Select...
          </div>
          <div
            class="css-1hf2qti"
            data-value=""
          >
            <input
              aria-activedescendant=""
              aria-autocomplete="list"
              aria-controls="react-select-5-listbox"
              aria-describedby="react-select-5-placeholder"
              aria-expanded="true"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              disabled=""
              id="react-select-5-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="css-1wy0on6"
        >
          <div
            aria-hidden="true"
            class="css-1xc3v61-indicatorContainer"
          >
            <div
              class="sc-jMpmlX CBnQj"
            >
              <span
                class="sc-dYOLZc iqnkiY"
                size="18"
              >
                <svg
                  viewBox="0 0 20 20"
                >
                  <path
                    d="m10 10.9 4.1-4.1 1.2 1.1-5.3 5.3L4.7 8l1.2-1.1z"
                    fill="#B3BAC1"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreatableSelect component testing Disable one CreatableSelected 1`] = `
<DocumentFragment>
  <div
    class="sc-bXdtCk iKNpYa"
  >
    <div
      class="css-3iigni-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-6-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
        role="log"
      />
      <div
        aria-disabled="true"
        class="css-yw5jbj-control"
      >
        <div
          class="css-1cnd4z4"
        >
          <div
            class="css-tncq6p-singleValue"
          >
            hoge
          </div>
          <div
            class="css-1hf2qti"
            data-value=""
          >
            <input
              aria-activedescendant=""
              aria-autocomplete="list"
              aria-controls="react-select-6-listbox"
              aria-expanded="true"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              disabled=""
              id="react-select-6-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="css-1wy0on6"
        >
          <div
            aria-hidden="true"
            class="css-1xc3v61-indicatorContainer"
          >
            <div
              class="sc-jMpmlX CBnQj"
            >
              <span
                class="sc-dYOLZc iqnkiY"
                size="18"
              >
                <svg
                  viewBox="0 0 20 20"
                >
                  <path
                    d="m10 10.9 4.1-4.1 1.2 1.1-5.3 5.3L4.7 8l1.2-1.1z"
                    fill="#B3BAC1"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreatableSelect component testing Error multiple CreatableSelected 1`] = `
<DocumentFragment>
  <div
    class="sc-bXdtCk gqRVkF"
  >
    <div
      class="css-b62m3t-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-10-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
        role="log"
      />
      <div
        class="css-q6ehzp-control"
      >
        <div
          class="css-1teqy4n"
        >
          <div
            class="css-tiolb5-multiValue"
          >
            <div
              class="css-1x1o8kv"
            >
              hoge
            </div>
            <div
              aria-label="Remove hoge"
              class="css-s5lend"
              role="button"
            >
              <span
                class="sc-dYOLZc iqnkiY"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20ZM12 10.5858L14.8284 7.75736L16.2426 9.17157L13.4142 12L16.2426 14.8284L14.8284 16.2426L12 13.4142L9.17157 16.2426L7.75736 14.8284L10.5858 12L7.75736 9.17157L9.17157 7.75736L12 10.5858Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="css-tiolb5-multiValue"
          >
            <div
              class="css-1x1o8kv"
            >
              huga
            </div>
            <div
              aria-label="Remove huga"
              class="css-s5lend"
              role="button"
            >
              <span
                class="sc-dYOLZc iqnkiY"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20ZM12 10.5858L14.8284 7.75736L16.2426 9.17157L13.4142 12L16.2426 14.8284L14.8284 16.2426L12 13.4142L9.17157 16.2426L7.75736 14.8284L10.5858 12L7.75736 9.17157L9.17157 7.75736L12 10.5858Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="css-1t1ifzv"
            data-value=""
          >
            <input
              aria-activedescendant=""
              aria-autocomplete="list"
              aria-controls="react-select-10-listbox"
              aria-expanded="true"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="react-select-10-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="css-1wy0on6"
        >
          <div
            class="sc-gwsNht"
          >
            <div
              aria-hidden="true"
              class="css-1xc3v61-indicatorContainer"
            >
              <span
                class="sc-dYOLZc iqnkiY"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 10.5858L9.17157 7.75736L7.75736 9.17157L10.5858 12L7.75736 14.8284L9.17157 16.2426L12 13.4142L14.8284 16.2426L16.2426 14.8284L13.4142 12L16.2426 9.17157L14.8284 7.75736L12 10.5858Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="css-1xc3v61-indicatorContainer"
          >
            <div
              class="sc-jMpmlX CBnQj"
            >
              <span
                class="sc-dYOLZc iqnkiY"
                size="18"
              >
                <svg
                  viewBox="0 0 20 20"
                >
                  <path
                    d="m10 10.9 4.1-4.1 1.2 1.1-5.3 5.3L4.7 8l1.2-1.1z"
                    fill="#EB0A4E"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreatableSelect component testing Error not CreatableSelected 1`] = `
<DocumentFragment>
  <div
    class="sc-bXdtCk gqRVkF"
  >
    <div
      class="css-b62m3t-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-8-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
        role="log"
      />
      <div
        class="css-q6ehzp-control"
      >
        <div
          class="css-1cnd4z4"
        >
          <div
            class="css-lunmsi-placeholder"
            id="react-select-8-placeholder"
          >
            Select...
          </div>
          <div
            class="css-1t1ifzv"
            data-value=""
          >
            <input
              aria-activedescendant=""
              aria-autocomplete="list"
              aria-controls="react-select-8-listbox"
              aria-describedby="react-select-8-placeholder"
              aria-expanded="true"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="react-select-8-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="css-1wy0on6"
        >
          <div
            aria-hidden="true"
            class="css-1xc3v61-indicatorContainer"
          >
            <div
              class="sc-jMpmlX CBnQj"
            >
              <span
                class="sc-dYOLZc iqnkiY"
                size="18"
              >
                <svg
                  viewBox="0 0 20 20"
                >
                  <path
                    d="m10 10.9 4.1-4.1 1.2 1.1-5.3 5.3L4.7 8l1.2-1.1z"
                    fill="#EB0A4E"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreatableSelect component testing Error one CreatableSelected 1`] = `
<DocumentFragment>
  <div
    class="sc-bXdtCk gqRVkF"
  >
    <div
      class="css-b62m3t-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-9-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
        role="log"
      />
      <div
        class="css-q6ehzp-control"
      >
        <div
          class="css-1cnd4z4"
        >
          <div
            class="css-ayvmsf-singleValue"
          >
            hoge
          </div>
          <div
            class="css-1t1ifzv"
            data-value=""
          >
            <input
              aria-activedescendant=""
              aria-autocomplete="list"
              aria-controls="react-select-9-listbox"
              aria-expanded="true"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="react-select-9-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="css-1wy0on6"
        >
          <div
            class="sc-gwsNht"
          >
            <div
              aria-hidden="true"
              class="css-1xc3v61-indicatorContainer"
            >
              <span
                class="sc-dYOLZc iqnkiY"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 10.5858L9.17157 7.75736L7.75736 9.17157L10.5858 12L7.75736 14.8284L9.17157 16.2426L12 13.4142L14.8284 16.2426L16.2426 14.8284L13.4142 12L16.2426 9.17157L14.8284 7.75736L12 10.5858Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="css-1xc3v61-indicatorContainer"
          >
            <div
              class="sc-jMpmlX CBnQj"
            >
              <span
                class="sc-dYOLZc iqnkiY"
                size="18"
              >
                <svg
                  viewBox="0 0 20 20"
                >
                  <path
                    d="m10 10.9 4.1-4.1 1.2 1.1-5.3 5.3L4.7 8l1.2-1.1z"
                    fill="#EB0A4E"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreatableSelect component testing Normal multiple CreatableSelected 1`] = `
<DocumentFragment>
  <div
    class="sc-bXdtCk gqRVkF"
  >
    <div
      class="css-b62m3t-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-4-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
        role="log"
      />
      <div
        class="css-1oh1mzt-control"
      >
        <div
          class="css-1teqy4n"
        >
          <div
            class="css-tiolb5-multiValue"
          >
            <div
              class="css-1vsdqd6"
            >
              hoge
            </div>
            <div
              aria-label="Remove hoge"
              class="css-s5lend"
              role="button"
            >
              <span
                class="sc-dYOLZc iqnkiY"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20ZM12 10.5858L14.8284 7.75736L16.2426 9.17157L13.4142 12L16.2426 14.8284L14.8284 16.2426L12 13.4142L9.17157 16.2426L7.75736 14.8284L10.5858 12L7.75736 9.17157L9.17157 7.75736L12 10.5858Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="css-tiolb5-multiValue"
          >
            <div
              class="css-1vsdqd6"
            >
              huga
            </div>
            <div
              aria-label="Remove huga"
              class="css-s5lend"
              role="button"
            >
              <span
                class="sc-dYOLZc iqnkiY"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 20C16.4183 20 20 16.4183 20 12C20 7.58172 16.4183 4 12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20ZM12 10.5858L14.8284 7.75736L16.2426 9.17157L13.4142 12L16.2426 14.8284L14.8284 16.2426L12 13.4142L9.17157 16.2426L7.75736 14.8284L10.5858 12L7.75736 9.17157L9.17157 7.75736L12 10.5858Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            class="css-1t1ifzv"
            data-value=""
          >
            <input
              aria-activedescendant=""
              aria-autocomplete="list"
              aria-controls="react-select-4-listbox"
              aria-expanded="true"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="react-select-4-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="css-1wy0on6"
        >
          <div
            class="sc-gwsNht"
          >
            <div
              aria-hidden="true"
              class="css-1xc3v61-indicatorContainer"
            >
              <span
                class="sc-dYOLZc iqnkiY"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 10.5858L9.17157 7.75736L7.75736 9.17157L10.5858 12L7.75736 14.8284L9.17157 16.2426L12 13.4142L14.8284 16.2426L16.2426 14.8284L13.4142 12L16.2426 9.17157L14.8284 7.75736L12 10.5858Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="css-1xc3v61-indicatorContainer"
          >
            <div
              class="sc-jMpmlX CBnQj"
            >
              <span
                class="sc-dYOLZc iqnkiY"
                size="18"
              >
                <svg
                  viewBox="0 0 20 20"
                >
                  <path
                    d="m10 10.9 4.1-4.1 1.2 1.1-5.3 5.3L4.7 8l1.2-1.1z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreatableSelect component testing Normal not CreatableSelected 1`] = `
<DocumentFragment>
  <div
    class="sc-bXdtCk gqRVkF"
  >
    <div
      class="css-b62m3t-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-2-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
        role="log"
      />
      <div
        class="css-1oh1mzt-control"
      >
        <div
          class="css-1cnd4z4"
        >
          <div
            class="css-ydlppi-placeholder"
            id="react-select-2-placeholder"
          >
            Select...
          </div>
          <div
            class="css-1t1ifzv"
            data-value=""
          >
            <input
              aria-activedescendant=""
              aria-autocomplete="list"
              aria-controls="react-select-2-listbox"
              aria-describedby="react-select-2-placeholder"
              aria-expanded="true"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="react-select-2-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="css-1wy0on6"
        >
          <div
            aria-hidden="true"
            class="css-1xc3v61-indicatorContainer"
          >
            <div
              class="sc-jMpmlX CBnQj"
            >
              <span
                class="sc-dYOLZc iqnkiY"
                size="18"
              >
                <svg
                  viewBox="0 0 20 20"
                >
                  <path
                    d="m10 10.9 4.1-4.1 1.2 1.1-5.3 5.3L4.7 8l1.2-1.1z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CreatableSelect component testing Normal one CreatableSelected 1`] = `
<DocumentFragment>
  <div
    class="sc-bXdtCk gqRVkF"
  >
    <div
      class="css-b62m3t-container"
    >
      <span
        class="css-1f43avz-a11yText-A11yText"
        id="react-select-3-live-region"
      />
      <span
        aria-atomic="false"
        aria-live="polite"
        aria-relevant="additions text"
        class="css-1f43avz-a11yText-A11yText"
        role="log"
      />
      <div
        class="css-1oh1mzt-control"
      >
        <div
          class="css-1cnd4z4"
        >
          <div
            class="css-t1czkd-singleValue"
          >
            hoge
          </div>
          <div
            class="css-1t1ifzv"
            data-value=""
          >
            <input
              aria-activedescendant=""
              aria-autocomplete="list"
              aria-controls="react-select-3-listbox"
              aria-expanded="true"
              aria-haspopup="true"
              autocapitalize="none"
              autocomplete="off"
              autocorrect="off"
              class=""
              id="react-select-3-input"
              role="combobox"
              spellcheck="false"
              style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
              tabindex="0"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="css-1wy0on6"
        >
          <div
            class="sc-gwsNht"
          >
            <div
              aria-hidden="true"
              class="css-1xc3v61-indicatorContainer"
            >
              <span
                class="sc-dYOLZc iqnkiY"
                size="18"
              >
                <svg
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22ZM12 10.5858L9.17157 7.75736L7.75736 9.17157L10.5858 12L7.75736 14.8284L9.17157 16.2426L12 13.4142L14.8284 16.2426L16.2426 14.8284L13.4142 12L16.2426 9.17157L14.8284 7.75736L12 10.5858Z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </div>
          </div>
          <div
            aria-hidden="true"
            class="css-1xc3v61-indicatorContainer"
          >
            <div
              class="sc-jMpmlX CBnQj"
            >
              <span
                class="sc-dYOLZc iqnkiY"
                size="18"
              >
                <svg
                  viewBox="0 0 20 20"
                >
                  <path
                    d="m10 10.9 4.1-4.1 1.2 1.1-5.3 5.3L4.7 8l1.2-1.1z"
                    fill="#041C33"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
